--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: lab401
 language: zh-tw
 timezone: UTC
 
-url: https://hexo.io
+url:
 root: /
 permalink: announces/:year/:month/:day/:title/
 archive_dir: announces
@@ -17,9 +17,8 @@ per_page: 0
 theme: navy
 deploy:
   type: git
-  repo: 
+  repo: git@github.com:setsal/401site.git
 
 highlight:
   enable: true
   line_number: false
-
