remove the announce page, and combine it to the homepage. change the language select func

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ timezone: UTC
 
 url: https://setsal.github.io
 root: /
-permalink: announces/:year/:month/:day/:title/
-archive_dir: announces
+permalink: /:year/:month/:day/:title/
+archive_dir: /
 code_dir: downloads/code
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 post_asset_folder: true
